<resources>
    <string name="app_name">File</string>
    <string name="bootTitle">文件</string>
    <string name="baseAlertPermissionDeniedTitle">请赋予我们权限</string>
    <string name="baseAlertPermissionDeniedMessage">我们需要读取您设备的本地存储的权限来运作，请赋予我们权限</string>
    <string name="dialogButtonPosText">确定</string>
    <string name="dialogButtonNegText">取消</string>
    <string name="dialogTitleNotice">注意</string>
    <string name="fileFragmentItemCount">%d 项</string>
    <string name="fileFragmentItemCounts">%d 项</string>
    <string name="fileFragmentItemSizeB">%s B</string>
    <string name="fileFragmentItemSizeKB">%s KB</string>
    <string name="fileFragmentItemSizeMB">%s MB</string>
    <string name="fileFragmentItemSizeGB">%s GB</string>
    <string name="fileFragmentItemSizeTB">%s TB</string>
    <string name="menuFileFragmentNew">新建</string>
    <string name="menuFileFragmentChoose">选择</string>
    <string name="menuFileFragmentSearch">搜索</string>
    <string name="menuFileFragmentRefresh">刷新</string>
    <string name="menuFileFragmentCopy">复制</string>
    <string name="menuFileFragmentCut">剪切</string>
    <string name="menuFileFragmentDelete">删除</string>
    <string name="menuFileFragmentSelectAll">全选</string>
    <string name="menuFileFragmentRename">重命名</string>
    <string name="dialogFileFragmentNewTitle">新建…</string>
    <string name="dialogFileFragmentNewPosText">创建</string>
    <string name="dialogFileFragmentNewNegText">取消</string>
    <string name="dialogFileFragmentNewFile">文件</string>
    <string name="dialogFileFragmentNewFolder">文件夹</string>
    <string name="dialogFileFragmentNewHintFileNameEmpty">文件名称不能为空</string>
    <string name="dialogFileFragmentNewHintFileNameExist">文件名称已经存在</string>
    <string name="dialogFileFragmentNewHintFileNameIllegal">文件名称不合法</string>
    <string name="dialogFileFragmentNewHintFileCreateFail">创建文件失败</string>
    <string name="dialogFileFragmentNewHintFileCreateSuccess">创建成功</string>
    <string name="dialogFileFragmentFileOperationOpen">打开</string>
    <string name="dialogFileFragmentFileOperationCut">剪切</string>
    <string name="dialogFileFragmentFileOperationCutAppend">追加为剪切操作</string>
    <string name="dialogFileFragmentFileOperationCopy">复制</string>
    <string name="dialogFileFragmentFileOperationCopyAppend">追加为复制操作</string>
    <string name="dialogFileFragmentFileOperationInfo">关于</string>
    <string name="dialogFileFragmentFileOperationRename">重命名</string>
    <string name="dialogFileFragmentFileOperationDelete">删除</string>
    <string name="dialogFileFragmentFileDeleteFileTitle">删除文件</string>
    <string name="dialogFileFragmentFileDeleteFilesTitle">删除多个文件</string>
    <string name="dialogFileFragmentFileDeleteFolderTitle">删除文件夹</string>
    <string name="dialogFileFragmentFileDeleteConfirmMessage">您确定要删除 %s 吗？此操作不可逆！</string>
    <string name="dialogFileFragmentFilesDeleteConfirmMessage">您确定要删除这些文件吗？此操作不可逆！</string>
    <string name="dialogFileFragmentInfoFileSize">%s ( %s )</string>
    <string name="dialogFileFragmentInfoFileTopicType">类型</string>
    <string name="dialogFileFragmentInfoFileTopicPath">路径</string>
    <string name="dialogFileFragmentInfoFileTopicSize">大小</string>
    <string name="dialogFileFragmentInfoFileTopicModifyTime">修改时间</string>
    <string name="dialogFileFragmentInfoFileTopicReadable">可读</string>
    <string name="dialogFileFragmentInfoFileTopicWritable">可写</string>
    <string name="dialogFileFragmentInfoFileTopicExecutable">可执行</string>
    <string name="dialogFileFragmentInfoFileTopicHidden">隐藏</string>
    <string name="toastFileFragmentFileNotExist">文件不存在</string>
    <string name="toastFileFragmentFileDeleteSuccess">删除成功</string>
    <string name="toastFileFragmentFileDeleteFail">删除失败</string>
    <string name="toastFileFragmentFileNoFileSelected">还没有选择文件</string>
    <string name="toastFileFragmentDeleteSuccessFileMissed">删除文件成功，有部分文件已经不存在</string>
    <string name="toastFileFragmentDeleteSuccessFileExist">删除成功</string>
    <string name="toastFileFragmentDeletePartlySuccessFileMissed">删除部分文件成功，有部分文件已经不存在或可能正在占用</string>
    <string name="toastFileFragmentDeletePartlySuccessFileExist">删除部分文件成功，有部分文件可能正在占用</string>
    <string name="toastFileFragmentDeleteFailSuccessFileMissed">删除文件失败，有部分文件已经不存在</string>
    <string name="toastFileFragmentDeleteFailSuccessFileExist">删除文件失败，有部分文件可能正在占用</string>
    <string name="hintDialogFileFileFragmentRenameEditText">请输入新的文件名</string>
    <string name="titleDialogFileFileFragmentRenameFileText">重命名</string>
    <string name="titleDialogFileFileFragmentRenameFilesText">重命名多个文件</string>
    <string name="hintDialogFileFileFragmentRenameFilesFileNameExist">此文件名称已经存在</string>
    <string name="hintDialogFileFragmentRenameNameEmpty">文件名不能为空</string>
    <string name="fileFragmentTitle">文件</string>
    <string name="mainEndDrawerTitleText">文件剪切板</string>
    <string name="mainEndDrawerOperationAllMoveTo">全部移动到</string>
    <string name="mainEndDrawerOperationAllPasteTo">全部粘贴到</string>
    <string name="mainEndDrawerOperationAllDelete">全部删除</string>
    <string name="mainEndDrawerOperationAllClear">全部清除</string>
    <string name="mainEndDrawerFileOperationCopy">复制</string>
    <string name="mainEndDrawerFileOperationCut">剪切</string>
    <string name="mainStartDrawerSetting">设置</string>
    <string name="mainStartDrawerInfo">关于</string>
    <string name="mainStartDrawerExit">退出</string>
    <string name="mainOperationFinishToast">操作完成</string>
    <string name="mainDialogTitleDeleteFiles">删除文件</string>
    <string name="mainDialogMessageDeleteFiles">您确定要删除剪切板中的所有文件吗？真的会删掉的哦！</string>
    <string name="mainTitleWindowManager">窗口管理器</string>
    <string name="mainToastWindowManagerAlreadyLastWindow">只剩下最后一个窗口了</string>
    <string name="mainStartDrawerCatalogCreateWindow">创建窗口</string>
    <string name="mainStartDrawerCatalogItemHome">主页</string>
    <string name="mainStartDrawerCatalogItemInternalStorage">内部存储</string>
    <string name="mainToastConfirmOnBackPressed">请再按一下返回退出</string>
    <string name="mainToastDrawerEndFileListEmpty">还没有选择要操作的文件哦</string>
    <string name="homeFragmentToolbarTitle">主页</string>
    <string name="homeFragmentOperationTitleImage">图片</string>
    <string name="homeFragmentOperationTitleMusic">音乐</string>
    <string name="homeFragmentOperationTitleVideo">视频</string>
    <string name="homeFragmentOperationTitleDocument">文档</string>
    <string name="homeFragmentOperationTitleApplication">应用</string>
    <string name="homeFragmentOperationTitleCollection">收藏</string>
    <string name="homeFragmentOperationTitleDownload">下载</string>
    <string name="homeFragmentOperationTitleMore">更多</string>
    <string name="homeFragmentOperationTitle">快速访问</string>
    <string name="homeFragmentStorageTitle">存储空间</string>
    <string name="aboutToolbarTitle">关于</string>
    <string name="aboutDescriptionString">就只是一个自己用的简单的文件管理器</string>
    <string name="appViewerTitle">应用</string>
    <string name="appViewerMenuMultiSelect">多选</string>
    <string name="appViewerMenuMultiUninstall">卸载</string>
    <string name="appViewerMenuMultiBackup">备份</string>
    <string name="appViewerInfoDialogVersion">版本 : %s(%s)</string>
    <string name="appViewerInfoDialogPackageName">包名 : %s</string>
    <string name="appViewerInfoDialogSize">大小 : %s</string>
    <string name="settingToolbarTitle">设置</string>
    <string name="fragmentHomeTitle">主页</string>
    <string name="fileTypeFile">文件</string>
    <string name="fileTypeFolder">文件夹</string>
    <string name="booleanTrue">是</string>
    <string name="booleanFalse">否</string>
    <string name="dialogColorSelectorRed">红</string>
    <string name="dialogColorSelectorGreen">绿</string>
    <string name="dialogColorSelectorBlue">蓝</string>
    <string name="musicPlayerActivityTitle">音乐播放器</string>
    <string name="musicPlayerNotificationChannelName">音乐播放器</string>
    <string name="musicPlayerMenuLrc">歌词显示</string>
    <string name="musicPlayerMenuLoop">循环模式</string>
    <string name="musicPlayerMenuLike">喜欢</string>
    <string name="musicPlayerMenuList">播放列表</string>
    <string name="musicPlayerLoopNo">单曲播放</string>
    <string name="musicPlayerLoopSingle">单曲循环</string>
    <string name="musicPlayerLoopOrder">顺序播放</string>
    <string name="musicPlayerLoopOrderLoop">列表循环</string>
    <string name="musicPlayerLoopRandom">随机播放</string>
    <string name="musicPlayerToastLoopModeNotSupport">不支持的循环模式</string>
    <string name="settingGeneralSettingTitle">常规设置</string>
    <string name="settingGeneralConfirmOnExitTitle">退出前确认</string>
    <string name="settingGeneralConfirmOnExitSubtitle">是否需要双击返回键才能退出程序</string>
    <string name="settingGeneralConfirmOnExitDelayTitle">双击返回键退出间隔时间</string>
    <string name="settingGeneralConfirmOnExitDelaySubtitle">双击返回退出程序的间隔时间</string>
    <string name="settingDialogGeneralConfirmOnExitDelayTitle">设定双击返回间隔时间</string>
    <string name="settingDialogGeneralConfirmOnExitDelayHintTemplate">当前时间 : %s ms</string>
    <string name="settingDialogGeneralConfirmOnExitDelayTimeTooShortHint">我们认为低于300ms的触发时间太短了，这将加大触发返回退出的难度，您确定要这样设置吗？</string>
    <string name="settingFileSettingTitle">文件设置</string>
    <string name="settingFileSettingShowHiddenFileTitle">显示隐藏文件</string>
    <string name="settingFileSettingShowHiddenFileSubtitle">是否在文件浏览器中显示隐藏文件</string>
    <string name="settingFileSettingOrderReverseTitle">倒序显示</string>
    <string name="settingFileSettingOrderReverseSubtitle">是否倒序显示文件</string>
    <string name="settingFileSettingCaseSensitiveTitle">大小写敏感</string>
    <string name="settingFileSettingCaseSensitiveSubtitle">是否大小写敏感(大写字母优于小写字母)</string>
    <string name="settingFileSettingFolderFirstTitle">文件夹置顶</string>
    <string name="settingFileSettingFolderFirstSubtitle">将文件夹排列在所有文件的上面</string>
    <string name="settingVideoPlayerCatalog">视频播放器设置</string>
    <string name="settingVideoPlayerEnableLeftSlideBrightnessTitle">滑动调节亮度</string>
    <string name="settingVideoPlayerEnableLeftSlideBrightnessSubtitle">是否开启滑动左边调节亮度</string>
    <string name="settingVideoPlayerEnableRightSlideVolumeTitle">滑动调节音量</string>
    <string name="settingVideoPlayerEnableRightSlideVolumeSubtitle">是否开启滑动友边调节音量</string>
    <string name="settingVideoPlayerEnableHorizontalSlideVolumeTitle">滑动调节进度</string>
    <string name="settingVideoPlayerEnableHorizontalSlideVolumeSubtitle">是否开启水平滑动播放进度</string>
    <string name="settingVideoPlayerHorizontalSlideUnitTitle">滑动调节时间单位</string>
    <string name="settingVideoPlayerHorizontalSlideUnitSubtitle">设置水平滑动时的调节时间单位</string>
    <string name="settingDialogVideoPlayerHorizontalSlideUnitHintTemplate">当前时间单位 : %s ms</string>
    <string name="settingDialogVideoPlayerHorizontalSlideUnitTitle">设定水平滑动单位时间</string>
    <string name="settingVideoPlayerJumpTimeUnitTitle">快进快退时间调整</string>
    <string name="settingVideoPlayerJumpTimeUnitSubtitle">设置点击一次快进快退所调整的时间</string>
    <string name="settingDialogVideoPlayerJumpTimeUnitHintTemplate">当前跳跃时间 : %s ms</string>
    <string name="settingDialogVideoPlayerJumpTimeUnitTitle">设定快进快退跳跃时间</string>
    <string name="settingVideoPlayerBackgroundColorTitle">播放器背景颜色</string>
    <string name="settingVideoPlayerBackgroundColorSubtitle">设置播放器视频画面外的背景颜色</string>
    <string name="settingDialogVideoPlayerBackgroundColorTitle">设置视频播放器背景颜色</string>
    <string name="settingTextViewerCatalog">文本浏览器设置</string>
    <string name="settingTextViewerTextSizeTitle">文本大小</string>
    <string name="settingTextViewerTextSizeSubtitle">设置文本浏览器的默认文本大小</string>
    <string name="settingDialogTextViewerTextSizeHintTemplate">当前文本大小 : %s </string>
    <string name="settingDialogTextViewerTextSizeTitle">设定文本浏览器默认大小</string>
    <string name="settingTextViewerDefaultCodingTitle">文本默认编码</string>
    <string name="settingTextViewerDefaultCodingSubtitle">当前文本编码方式为 : %s</string>
    <string name="videoPlayerMenuLock">锁定触摸</string>
    <string name="videoPlayerMenuRotate">屏幕旋转</string>
    <string name="videoPlayerMenuScale">视频缩放</string>
</resources>