<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:padding="8dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:id="@+id/dialogBaseFileInfoIcon"
                    tools:src="@drawable/ic_file_icon"
                    android:layout_width="64dp"
                    android:layout_height="64dp"/>
            <TextView
                    android:id="@+id/dialogBaseFileInfoTitle"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    tools:text="asdasdasdasdasdasda"
                    android:maxLines="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:text="@string/dialogFileFragmentInfoFileTopicType"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/dialogBaseFileInfoFileType"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    tools:text="文件"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:text="@string/dialogFileFragmentInfoFileTopicPath"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/dialogBaseFileInfoFilePath"
                    android:maxLines="3"
                    android:textColor="@color/black"
                    tools:text="/storage/emulated/0/implempion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:text="@string/dialogFileFragmentInfoFileTopicSize"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/dialogBaseFileInfoFileSize"
                    android:maxLines="3"
                    android:textColor="@color/black"
                    tools:text="26KB ( 1024字节 )"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:text="@string/dialogFileFragmentInfoFileTopicModifyTime"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/dialogBaseFileInfoModifyTime"
                    android:maxLines="3"
                    android:textColor="@color/black"
                    tools:text="2018/12/05 12:56:00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:text="@string/dialogFileFragmentInfoFileTopicReadable"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/dialogBaseFileInfoReadable"
                    android:maxLines="3"
                    android:textColor="@color/black"
                    tools:text="是"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:text="@string/dialogFileFragmentInfoFileTopicWritable"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/dialogBaseFileInfoWritable"
                    android:maxLines="3"
                    android:textColor="@color/black"
                    tools:text="否"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:text="@string/dialogFileFragmentInfoFileTopicExecutable"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/dialogBaseFileInfoExecutable"
                    android:maxLines="3"
                    android:textColor="@color/black"
                    tools:text="否"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:text="@string/dialogFileFragmentInfoFileTopicHidden"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/dialogBaseFileInfoHidden"
                    android:maxLines="3"
                    android:textColor="@color/black"
                    tools:text="否"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>