<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
            android:shadowRadius="16"
            android:shadowColor="@color/black"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="23sp"
            android:textColor="@color/white"
            tools:text="#66CCFF"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/dialogColorSelectorPreview"
            tools:background="#66ccff"
            android:layout_width="256dp"
            android:layout_height="60dp"/>

    <TextView
            android:id="@+id/dialogColorSelectorRedTitle"
            app:layout_constraintTop_toTopOf="@id/dialogColorSelectorRedSeekBar"
            app:layout_constraintBottom_toBottomOf="@id/dialogColorSelectorRedSeekBar"
            app:layout_constraintStart_toStartOf="parent"
            android:textAlignment="center"
            android:text="@string/dialogColorSelectorRed"
            android:layout_width="36dp"
            android:layout_height="wrap_content"/>

    <TextView
            app:layout_constraintTop_toTopOf="@id/dialogColorSelectorRedSeekBar"
            app:layout_constraintBottom_toBottomOf="@id/dialogColorSelectorRedSeekBar"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/dialogColorSelectorRedValue"
            android:textAlignment="center"
            tools:text="145"
            android:layout_width="36dp"
            android:layout_height="wrap_content"/>

    <SeekBar
            android:max="255"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@id/dialogColorSelectorRedTitle"
            app:layout_constraintEnd_toStartOf="@id/dialogColorSelectorRedValue"
            app:layout_constraintTop_toBottomOf="@id/dialogColorSelectorPreview"
            android:id="@+id/dialogColorSelectorRedSeekBar"
            android:layout_width="0dp"
            android:layout_height="36dp"/>

    <TextView
            app:layout_constraintTop_toTopOf="@id/dialogColorSelectorGreenSeekBar"
            app:layout_constraintBottom_toBottomOf="@id/dialogColorSelectorGreenSeekBar"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/dialogColorSelectorGreenTitle"
            android:textAlignment="center"
            android:text="@string/dialogColorSelectorGreen"
            android:layout_width="36dp"
            android:layout_height="wrap_content"/>

    <TextView
            app:layout_constraintTop_toTopOf="@id/dialogColorSelectorGreenSeekBar"
            app:layout_constraintBottom_toBottomOf="@id/dialogColorSelectorGreenSeekBar"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/dialogColorSelectorGreenValue"
            android:textAlignment="center"
            tools:text="3"
            android:layout_width="36dp"
            android:layout_height="wrap_content"/>

    <SeekBar
            android:max="255"
            app:layout_constraintStart_toEndOf="@id/dialogColorSelectorGreenTitle"
            app:layout_constraintEnd_toStartOf="@id/dialogColorSelectorGreenValue"
            app:layout_constraintTop_toBottomOf="@id/dialogColorSelectorRedSeekBar"
            android:id="@+id/dialogColorSelectorGreenSeekBar"
            android:layout_width="0dp"
            android:layout_height="36dp"/>

    <TextView
            app:layout_constraintTop_toTopOf="@id/dialogColorSelectorBlueSeekBar"
            app:layout_constraintBottom_toBottomOf="@id/dialogColorSelectorBlueSeekBar"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/dialogColorSelectorBlueTitle"
            android:textAlignment="center"
            android:text="@string/dialogColorSelectorBlue"
            android:layout_width="36dp"
            android:layout_height="wrap_content"/>

    <TextView
            app:layout_constraintTop_toTopOf="@id/dialogColorSelectorBlueSeekBar"
            app:layout_constraintBottom_toBottomOf="@id/dialogColorSelectorBlueSeekBar"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/dialogColorSelectorBlueValue"
            android:textAlignment="center"
            tools:text="255"
            android:layout_width="36dp"
            android:layout_height="wrap_content"/>

    <SeekBar
            android:max="255"
            app:layout_constraintEnd_toStartOf="@id/dialogColorSelectorBlueValue"
            app:layout_constraintStart_toEndOf="@id/dialogColorSelectorBlueTitle"
            app:layout_constraintTop_toBottomOf="@id/dialogColorSelectorGreenSeekBar"
            android:id="@+id/dialogColorSelectorBlueSeekBar"
            android:layout_width="0dp"
            android:layout_height="36dp"/>




</android.support.constraint.ConstraintLayout>